testing fix for grid on mobile

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -213,7 +213,7 @@ h1 {
 .about-grid{
   display: grid;
   grid-template-columns:7fr 3fr;
-  grid-template-rows: auto auto;
+  grid-auto-rows: auto;
   margin-top: .5em;
   grid-gap: .5em;
   margin-bottom: 0.5em;
